@@ -1,3 +1,9 @@
+2009-06-08  Oliver Henshaw <oliver.henshaw@gmail.com>
+
+	* bus/usb/uhci.c: Remove unneeded doubled lines.
+	* bus/usb/ohci.c: Likewise. Change interf to grub_uint32_t.
+	Remove whitespace inside comment.
+
 2009-06-08  Robert Millan  <rmh.grub@aybabtu.com>
 
 	* loader/i386/linux.c (grub_cmd_linux): When processing `vga=', use
